--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,15 @@
             "email": "david.meth@live.com"
         }
     ],
-    "require": {}
+    "require": {
+        "phpmailer/phpmailer": "^6.8",
+        "vlucas/phpdotenv": "^5.5"
+    },
+    "scripts": {
+        "serve": [
+            "Composer\\Config::disableProcessTimeout",
+            "php -S localhost:8001"
+        ],
+        "proc-test": "php tests/tests.php"
+    }
 }
