--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+APP_URL=http://localhost:8000
 ENVIRONMENT=development,production
-MAILER_USER_MAIL=mail@example.com
-MAILER_USER_PASSWORD=
+EMAIL_ADDRESS=mail@example.com
+EMAIL_PASSWORD=
+OPENSSL_SECRET=
