migrated to MVC in OOP

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
 APP_URL=http://localhost:8000
-ENVIRONMENT=development,production
+
+ENVIRONMENT={development,production}
+MAINTENANCE=false
+
 EMAIL_ADDRESS=mail@example.com
 EMAIL_PASSWORD=
+EMAIL_SMPT_HOST=smtp.example.com
+
 OPENSSL_SECRET=
+
+EXPIRATION_TIME=
+
+PASSWORD_ALGO=
